<resources>
    <string name="app_name">Codelabs</string>
    <string name="btn_intents">Intents</string>

    <!-- INTENTS -->
    <string name="edittext_uri">http://developer.android.com</string>
    <string name="button_uri">Open Website</string>

    <string name="edittext_loc">Golden Gate Bridge</string>
    <string name="button_loc">Open Location</string>

    <string name="edittext_share">\'Twas brillig and the slithy toves</string>
    <string name="button_share">Share This Text</string>
    <string name="droid_cafe">Droid Cafe</string>
    <string name="title_activity_droid">DroidActivity</string>

    <!-- DROID CAFE -->
    <string name="intro_text">Droid Desserts</string>
    <string name="donuts">Donuts are glazed and sprinkled with candy.</string>
    <string name="ice_cream_sandwiches">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="froyo">FroYo is premium self-serve frozen yogurt.</string>

    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="order">Order</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="enter_phone">Enter phone</string>
    <string name="note_label">Note:</string>
    <string name="note_hint">Add a note</string>
    <string name="delivery_method_label">Choose a delivery method:</string>
    <string name="sameday_message">Same day messenger service</string>
    <string name="next_day_message">Next day ground delivery</string>
    <string name="pick_up_message">Pick up</string>

    <string-array name="labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>

</resources>
