<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ux.OrderActivity">

    <TextView
            android:id="@+id/text_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="24dp"
            android:text="@string/order"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintBottom_toTopOf="@+id/name_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_order" />

    <EditText
            android:id="@+id/name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            app:layout_constraintBaseline_toBaselineOf="@id/name_label"
            app:layout_constraintStart_toEndOf="@+id/name_label"
            tools:ignore="Autofill" />

    <TextView
            android:id="@+id/adress_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/address"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_label" />

    <EditText
            android:id="@+id/text_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/address"
            android:inputType="textMultiLine"
            app:layout_constraintBaseline_toBaselineOf="@+id/adress_label"
            app:layout_constraintStart_toEndOf="@+id/adress_label"
            tools:ignore="Autofill" />

    <TextView
            android:id="@+id/lable_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/adress_label" />

    <EditText
            android:id="@+id/phone_text"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:hint="@string/enter_phone"
            android:inputType="phone"
            app:layout_constraintBaseline_toBaselineOf="@+id/lable_phone"
            app:layout_constraintStart_toEndOf="@+id/lable_phone"
            tools:ignore="Autofill" />

    <TextView
            android:id="@+id/note_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/note_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lable_phone" />

    <EditText
            android:id="@+id/note_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/note_hint"
            android:inputType="textMultiLine|textCapSentences"
            app:layout_constraintBaseline_toBaselineOf="@+id/note_label"
            app:layout_constraintStart_toEndOf="@+id/note_label"
            tools:ignore="Autofill" />

    <TextView
            android:id="@+id/delivery_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/delivery_method_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/note_text" />

    <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/delivery_label">

        <RadioButton
                android:id="@+id/sameday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:onClick="onRadioButtonClicked"
                android:text="@string/sameday_message" />

        <RadioButton
                android:id="@+id/nextday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/next_day_message" />

        <RadioButton
                android:id="@+id/pickup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/pick_up_message" />
    </RadioGroup>

    <Spinner
            android:id="@+id/label_spinner"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/phone_text"
            app:layout_constraintTop_toBottomOf="@id/text_address" />

</androidx.constraintlayout.widget.ConstraintLayout>